# muncher

./: LICENSE  README.md  backup_save.py  build-container.sh  build-python.sh  build.Containerfile  main.py  models.py  pyproject.toml  requirements.txt  run-quick.sh  run.Containerfile  run.sh  update-lockfile.sh
.github/: dependabot.yml
.github/workflows/: auto-merge-dependabot.yml  build-oci.yml
muncher/: backup_save.py  main.py  main_old.py
src/muncher/: main.py
