[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "muncher"
description = "A tool to organize attendance for munches"
dynamic= ["version"]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = [""]
authors = [
  { name = "ponos" },
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "nicegui",
]

[project.urls]
source = "https://github.com/ponos-diy/muncher"

[project.scripts]
run-web-ui = "muncher.main:main"

[tool.hatch.version]
source = "vcs"

